Corrected error text overflow

--- a/src/app/dialogs/error-dialog/error-dialog.component.scss
+++ b/src/app/dialogs/error-dialog/error-dialog.component.scss
@@ -25,6 +25,10 @@ section div {
   padding: 20px 20px 0px 20px;
 }
 
+section span {
+    overflow-wrap: break-word;
+}
+
 footer {
   width: 100%;
   height: 45px;
